# task-manager

./: .env  .env.sample  .flake8  .gitignore  Procfile  README.md  captain-definition  coverage.xml  makefile  pyproject.toml  requirements.txt
.github/workflows/: linter-and-test.yml
labels/: models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json  test_data.json
labels/migrations/: 0001_initial.py
labels/templates/: label_create.html  label_delete.html  label_list.html  label_update.html
manager/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
manager/fixtures/: users.json
manager/migrations/: 0001_initial.py
manager/templates/: create.html  delete.html  index.html  layout.html  login.html  navigation.html  register.html  update.html  users.html
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json  test_data.json
statuses/migrations/: 0001_initial.py
statuses/templates/: status_create.html  status_delete.html  status_list.html  status_update.html
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/templates/: layout.html  login.html  navigation.html
tasks/: filters.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json  test_data.json
tasks/migrations/: 0001_initial.py
tasks/templates/: task_create.html  task_delete.html  task_detail.html  task_list.html  task_update.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/fixtures/: test_data.json  users.json
users/migrations/: 0001_initial.py
(+4 files in other folders)
