[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["JMURv <architect.lock@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
python-dotenv = "^0.21.0"
django-bootstrap4 = "^22.2"
bootstrap4 = "^0.1.0"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
