[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["JMURv <architect.lock@outlook.com>"]
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
python-dotenv = "^0.21.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.2"
bootstrap4 = "^0.1.0"
psycopg2 = "^2.9.5"
django-filter = "^22.1"
rollbar = "^0.16.3"
psycopg2-binary = "^2.9.5"


[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
